[package]
name = "r-type"
version = "0.1.0"
authors = ["Quentin <quentin.liardeaux@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.objc]
version = "=0.2.6"

[dependencies.amethyst]
version = "0.13"
#features = ["nightly"]

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
